[project]
name = "comparizon-fastapi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "gsy0911", email = "yoshiki0911@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.4",
    "uvicorn[standard]>=0.32.0",
]
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi"]
