[project]
name = "comparizon-flask"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "gsy0911", email = "yoshiki0911@gmail.com" }
]
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=23.0.0",
]
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/flask"]